--- a/style.css
+++ b/style.css
@@ -69,4 +69,9 @@ button:hover{
     font-size: 30px;
     border-radius: 10px;
     background-color: white;
+    padding: 10px;
+}
+
+.res div{
+    border: 2px solid red;
 }
